--- a/main.css
+++ b/main.css
@@ -1,9 +1,17 @@
+h1{
+	margin-top: 90px;
+	margin-left: 397px;
+
+}
+
+
 .butt{
 	background-color: green;
 	border-radius: 100px;
 	width: 200px;
 	height: 200px;
-	margin: 150px;
+	margin-top: 50px;
+	margin-left: 555px; 
 	text-align: center;
 	padding-top: 75px;
 	font-weight: bold;
